--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,11 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
-          "strict": true
+          "strict": true,
+          "skipTests": true
+        },
+        "@schematics/angular:module": {
+          "routing": true
         }
       },
       "root": "",
